# arret

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
arret/: __main__.py  batch.py  clean.py  inventory.py  plan.py  terra.py  utils.py
configs/: example.dist.toml  example.toml.dist
