[tool.poetry]
name = "arret"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "arret"}]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
google-cloud-storage = "^2.18.1"
firecloud = "^0.16.37"
typer = "^0.12.3"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.6"
[tool.ruff]
select = [
    "I",  # isort formatting
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
