[tool.poetry]
name = "arret"
version = "1.0.3"
description = ""
authors = ["Devin McCabe <dmccabe@broadinstitute.org>"]
license = "MIT"
readme = "README.md"
packages = [{include = "arret"}]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
google-cloud-storage = "^2.18.1"
typer = "^0.12.3"
click = "^8.1.7"
duckdb = "^1.1.2"
psutil = "^6.1.0"
google-cloud-batch = "^0.17.30"
google-cloud-compute = "^1.20.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.7"
pyright = "^1.1.403"

[tool.ruff]
select = [
    "I",  # isort formatting
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
